devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prod(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: express-prod
            port:
              number: 9000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-prep-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prep(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: express-prep
            port:
              number: 8000
